--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icons8.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recursive Sequence Calculator</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=arithmetic.html">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>Redirecting to Arithmetic Sequence Calculator...</p>
+</body>
+</html> 
