--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=arithmetic.html">
-    <title>Redirecting...</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Free online sequence calculator. Calculate arithmetic and geometric sequences, find nth terms, sums, and more with our easy-to-use math tools." />
+  <meta name="keywords" content="sequence calculator, arithmetic sequence, geometric sequence, math calculator, series calculator, online math tools" />
+  <meta name="author" content="Math Tools" />
+  <meta name="robots" content="index, follow" />
+
+  <title>Sequence Calculator | Free Arithmetic & Geometric Tools</title>
+  <link rel="canonical" href="https://yourdomain.com/" />
+
+  <!-- Open Graph for social media -->
+  <meta property="og:title" content="Sequence Calculator | Free Arithmetic & Geometric Tools" />
+  <meta property="og:description" content="Free online sequence calculator. Easily calculate arithmetic and geometric sequences with our interactive tools." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+      color: #333;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    p {
+      margin-bottom: 20px;
+      color: #555;
+    }
+    .links {
+      margin-top: 30px;
+    }
+    .links a {
+      color: #4CAF50;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    .links a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <p>Redirecting to Arithmetic Sequence Calculator...</p>
+  <h1>Welcome to the Online Sequence Calculator</h1>
+  <p>
+    Quickly calculate arithmetic and geometric sequences with our free tools. Whether you're a student, teacher, or math enthusiast, we've got you covered.
+  </p>
+
+  <div class="links">
+    <a href="/arithmetic.html">🔢 Arithmetic Sequence Calculator</a>
+    <a href="/geometric.html">📈 Geometric Sequence Calculator</a>
+  </div>
+
+  <p>More tools are coming soon, including Fibonacci sequences, harmonic progressions, and more.</p>
 </body>
-</html> 
+</html>
