update domain msg

--- a/arithmetic.html
+++ b/arithmetic.html
@@ -9,12 +9,12 @@
   <meta name="robots" content="index, follow" />
 
   <title>Arithmetic Sequence Calculator | Free Online Tool</title>
-  <link rel="canonical" href="https://yourdomain.com/arithmetic" />
+  <link rel="canonical" href="https://www.recursivesequence.net/arithmetic">
 
   <meta property="og:title" content="Arithmetic Sequence Calculator | Free Online Tool" />
   <meta property="og:description" content="Use our free calculator to find nth term, sequence sum and more for any arithmetic progression." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/arithmetic" />
+  <meta property="og:url" content="https://www.recursivesequence.net/arithmetic" />
 
   <style>
     body {
