--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="robots" content="index, follow" />
 
   <title>Sequence Calculator | Free Arithmetic & Geometric Tools</title>
-  <link rel="canonical" href="https://yourdomain.com/" />
+  <link rel="canonical" href="https://www.recursivesequence.net/" />
 
   <!-- Open Graph for social media -->
   <meta property="og:title" content="Sequence Calculator | Free Arithmetic & Geometric Tools" />
   <meta property="og:description" content="Free online sequence calculator. Easily calculate arithmetic and geometric sequences with our interactive tools." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:url" content="https://www.recursivesequence.net/" />
 
   <style>
     body {
