update html redirect

--- a/arithmetic.html
+++ b/arithmetic.html
@@ -9,12 +9,25 @@
   <meta name="robots" content="index, follow" />
 
   <title>Arithmetic Sequence Calculator | Free Online Tool</title>
-  <link rel="canonical" href="https://www.recursivesequence.net/arithmetic">
+  <!-- 更新canonical标签使用完整的https URL -->
+  <link rel="canonical" href="https://recursivesequence.net/arithmetic/" />
+  
+  <!-- 添加替代版本链接 -->
+  <link rel="alternate" href="https://recursivesequence.net/arithmetic/" hreflang="x-default" />
+  <link rel="alternate" href="https://recursivesequence.net/arithmetic/" hreflang="en" />
+  
+  <!-- 强制HTTPS -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <meta property="og:title" content="Arithmetic Sequence Calculator | Free Online Tool" />
   <meta property="og:description" content="Use our free calculator to find nth term, sequence sum and more for any arithmetic progression." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.recursivesequence.net/arithmetic" />
+  <meta property="og:url" content="https://recursivesequence.net/arithmetic/" />
+  
+  <!-- 添加Twitter卡片元数据 -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Arithmetic Sequence Calculator | Free Online Tool" />
+  <meta name="twitter:description" content="Use our free calculator to find nth term, sequence sum and more for any arithmetic progression." />
 
   <style>
     body {
