--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
   <meta name="robots" content="index, follow" />
 
   <title>Sequence Calculator | Free Arithmetic & Geometric Tools</title>
-  <link rel="canonical" href="https://www.recursivesequence.net/" />
+  <!-- 更新canonical标签使用标准格式 -->
+  <link rel="canonical" href="https://recursivesequence.net/" />
+  
+  <!-- 添加替代版本链接 -->
+  <link rel="alternate" href="https://recursivesequence.net/" hreflang="x-default" />
+  <link rel="alternate" href="https://recursivesequence.net/" hreflang="en" />
+  
+  <!-- 强制HTTPS -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <!-- Open Graph for social media -->
   <meta property="og:title" content="Sequence Calculator | Free Arithmetic & Geometric Tools" />
   <meta property="og:description" content="Free online sequence calculator. Easily calculate arithmetic and geometric sequences with our interactive tools." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.recursivesequence.net/" />
+  <meta property="og:url" content="https://recursivesequence.net/" />
+  
+  <!-- 添加Twitter卡片元数据 -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Sequence Calculator | Free Arithmetic & Geometric Tools" />
+  <meta name="twitter:description" content="Free online sequence calculator. Easily calculate arithmetic and geometric sequences with our interactive tools." />
 
   <style>
     body {
@@ -54,8 +67,8 @@
   </p>
 
   <div class="links">
-    <a href="/arithmetic.html">🔢 Arithmetic Sequence Calculator</a>
-    <a href="/geometric.html">📈 Geometric Sequence Calculator</a>
+    <a href="/arithmetic/">🔢 Arithmetic Sequence Calculator</a>
+    <a href="/geometric/">📈 Geometric Sequence Calculator</a>
   </div>
 
   <p>More tools are coming soon, including Fibonacci sequences, harmonic progressions, and more.</p>
